# xiox

./: .clang-format  README.md  meson.build
src/: drawing.c  drawing.h  global.h  screen.c  screen.h  term.c  term.h  types.h  xiox.c
